--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/Pictures/Wallpapers/isGN4ZN-1920-by-1080-hd-wallpapers.jpg
-wallpaper = eDP-1,~/Pictures/Wallpapers/isGN4ZN-1920-by-1080-hd-wallpapers.jpg
+preload = ~/Pictures/Wallpapers/cropped-2560-1440-1315270.jpeg
+wallpaper = eDP-1,~/Pictures/Wallpapers/cropped-2560-1440-1315270.jpeg
