--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,10 +1,14 @@
 dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = cliphist wipe # Clear Clipboard
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
-exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 exec-once = hyprpaper # Wallpaper
+exec-once = systemctl --user start opentabletdriver.service
+exec-once = /usr/lib/kdeconnectd
+exec-once = dunst
+exec-once = mpDris2
 exec-once = waybar # launch the system panel
 exec-once = clash-verge
+exec-once = xss-lock swaylock &
 exec-once = fcitx5 --replace -d
 # exec-once = echo "Xft.dpi: 130" | xrdb -merge
 # exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
@@ -24,6 +28,13 @@ windowrulev2 = float,class:^(steam)$ # Steam Popups
 windowrulev2 = float,title:^(Qt5 Configuration Tool)$ # Qt5
 windowrulev2 = float,title:^(Qt6 Configuration Tool)$ # Qt6
 windowrulev2 = float, class:^(.*fcitx.*)$
+windowrulev2 = float,floating:0,class:^(Matlab R2023a*)
+windowrulev2 = forceinput,class:^(Matlab*)
+windowrulev2 = windowdance,class:^(Matlab*) # allows IDE to move child window
+
+windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = nofocus,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
@@ -54,7 +65,6 @@ input {
 
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     gaps_in = 5
     gaps_out = 20
     border_size = 2
@@ -68,10 +78,10 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 10
-    blur = yes
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = on
+# blur = yes
+# blur_size = 3
+# blur_passes = 1
+# blur_new_optimizations = on
 
     drop_shadow = yes
     shadow_range = 4
@@ -116,6 +126,10 @@ device:epic-mouse-v1 {
     sensitivity = -0.5
 }
 
+misc {
+    disable_hyprland_logo = true
+}
+
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
 # Example windowrule v2
@@ -137,7 +151,7 @@ $term = kitty
 $screenshot = grimshot
 # $colorpicker = $scriptsDir/colorpicker
 $files = joshuto
-$browser = chromium
+$browser = microsoft-edge-stable
 
 
 bindle = ,XF86AudioRaiseVolume,exec,pactl set-sink-volume @DEFAULT_SINK@ +5% 
