--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,3 @@
 preload = ~/Pictures/Wallpapers/cropped-2560-1440-1315270.jpeg
 wallpaper = eDP-1,~/Pictures/Wallpapers/cropped-2560-1440-1315270.jpeg
+splash = false
